83 относительные импорты, z-index fix

--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -19,7 +19,7 @@
     --modal-content-z-index: 6000;
     --modal-opened-z-index: 20000;
     --overlay-z-index: 5000;
-    --sidebar-btn-z-index: 4000;
+    --sidebar-btn-z-index: 100;
 
     // Colors
     --overlay-color: rgba(0 0 0 / 60%);
